# ofSerial

./: .gitignore  CMakeLists.txt  README.md  main.cpp  ofSerial.cpp  ofSerial.h
example/: esp32_main.cpp  main.cpp
include/: ofSerial.h
src/: ofSerial.cpp
